--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <h1>Is your Birthday Lucky?👀🤔</h1>
     <div class="container">
-        <label for="date-of-birth"> <strong>Date of Birth</strong></label>
-        <input type="date" id="date-of-birth">
-        <label for="lucky-number"><strong>Lucky Number</strong></label>
-        <input id="lucky-number" type="number">
-        <button type="submit" id="check-number">Check Number</button>
+        <label for="date-of-birth"> <strong>Date of Birth</strong>
+        <input type="date" ,id="date-of-birth">
+    </label>
+        <label for="lucky-number"><strong>Lucky Number</strong>
+        <input id="lucky-number", type="number">
+    </label>
+        <button id="check-number">Check Number</button>
+    <output  id="out-put", placeholder="output comes here.."> </output>
+
+    
     </div>
     <script src="app.js"></script>
 </body>
