--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <h1>Is your Birthday Lucky?👀🤔</h1>
     <div class="container">
         <label for="date-of-birth"> <strong>Date of Birth</strong>
-        <input type="date" ,id="date-of-birth">
+        <input type="date" id="date-of-birth">
     </label>
         <label for="lucky-number"><strong>Lucky Number</strong>
-        <input id="lucky-number", type="number">
+        <input id="lucky-number" type="number">
     </label>
         <button id="check-number">Check Number</button>
-    <output  id="out-put", placeholder="output comes here.."> </output>
+    <output  id="out-put"> </output>
 
     
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
